CIRC-734 Add org.folio.util dependency

--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,12 @@
     </dependency>
     <dependency>
       <groupId>org.folio</groupId>
+      <artifactId>util</artifactId>
+      <version>29.1.5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.folio</groupId>
       <artifactId>testing</artifactId>
       <version>${rmb.version}</version>
       <scope>test</scope>
