--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,12 @@
       <groupId>org.folio</groupId>
       <artifactId>mod-pubsub-client</artifactId>
       <version>1.1.5</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-all</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.folio</groupId>
