--- a/pom.xml
+++ b/pom.xml
@@ -404,6 +404,10 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
         <configuration>
+          <!-- 0.5 * 'number of available cores', i.e. 2 for quad core envs -->
+          <forkCount>0.5C</forkCount>
+          <reuseForks>true</reuseForks>
+          <argLine>-Xmx256m</argLine>
           <useSystemClassLoader>false</useSystemClassLoader>
         </configuration>
       </plugin>
