--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>mod-pubsub-client</artifactId>
-      <version>1.3.0-SNAPSHOT</version>
+      <version>1.3.0</version>
       <exclusions>
         <exclusion>
           <groupId>org.hamcrest</groupId>
