--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>mod-pubsub-client</artifactId>
-      <version>1.3.1</version>
+      <version>1.4.0-SNAPSHOT</version>
       <exclusions>
         <exclusion>
           <groupId>org.hamcrest</groupId>
@@ -411,7 +411,7 @@
         <configuration>
           <forkCount>3</forkCount>
           <reuseForks>true</reuseForks>
-          <argLine>@{argLine} -Xmx256m</argLine>
+<!--          <argLine>@{argLine} -Xmx256m</argLine>-->
           <useSystemClassLoader>false</useSystemClassLoader>
         </configuration>
       </plugin>
