--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>mod-pubsub-client</artifactId>
-      <version>1.4.0-SNAPSHOT</version>
+      <version>1.3.1</version>
       <exclusions>
         <exclusion>
           <groupId>org.hamcrest</groupId>
