--- a/pom.xml
+++ b/pom.xml
@@ -232,8 +232,8 @@
     </dependency>
     <dependency>
       <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock</artifactId>
-      <version>2.25.1</version>
+      <artifactId>wiremock-jre8</artifactId>
+      <version>2.28.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
