--- a/pom.xml
+++ b/pom.xml
@@ -327,6 +327,11 @@
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.8.6</version>
+        <configuration>
+          <excludes>
+            <exclude>org/drools/compiler/lang/*</exclude>
+          </excludes>
+        </configuration>
         <executions>
           <execution>
             <goals>
