[CIRC-1383] disable coverage check

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <lombok.version>1.18.16</lombok.version>
     <spring.version>5.2.7.RELEASE</spring.version>
     <maven.site.plugin.version>3.9.1</maven.site.plugin.version>
+    <sonar.coverage.exclusions>**src/test/**</sonar.coverage.exclusions>
   </properties>
 
   <dependencyManagement>
