--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>mod-circulation</artifactId>
   <groupId>org.folio</groupId>
-  <version>22.1.6-SNAPSHOT</version>
+  <version>22.1.6</version>
   <licenses>
     <license>
       <name>Apache License 2.0</name>
@@ -281,7 +281,7 @@
     <url>https://github.com/folio-org/mod-inventory</url>
     <connection>scm:git:git://github.com:folio-org/mod-inventory.git</connection>
     <developerConnection>scm:git:git@github.com:folio-org/mod-inventory.git</developerConnection>
-    <tag>v22.1.0</tag>
+    <tag>v22.1.6</tag>
   </scm>
 
   <build>
