--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
   <properties>
     <antlr4.version>4.7.2</antlr4.version>
     <drools.version>7.53.0.Final</drools.version>
-    <rmb.version>33.1.1</rmb.version>
-    <vertx.version>4.2.7</vertx.version>
+    <rmb.version>35.0.0</rmb.version>
+    <vertx.version>4.3.3</vertx.version>
     <log4j2.version>2.17.1</log4j2.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -251,6 +251,12 @@
       <groupId>org.folio</groupId>
       <artifactId>cql2pgjson</artifactId>
       <version>${rmb.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.folio.okapi</groupId>
+      <artifactId>okapi-testing</artifactId>
+      <version>4.14.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
